fixed picture aligning

--- a/style.css
+++ b/style.css
@@ -10,8 +10,14 @@
     transition: all 0.5s ease;
     z-index: 1000;
     opacity: 1;
-
 }
+
+@media only screen and (max-width: 790px) {
+    #imageAboutPage{
+        width : 190px;
+        height: 500px;
+    }
+  }
 
 /* Shrink image style */
 .shrink {
